# AccessiTech

./: .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.ts  404.html  ACCESSIBILITY.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHASE_5_IMPLEMENTATION.md  README.md  accessibility-workplan.md  ads-integration-workplan.md  asset-manifest.json  babel.config.json  codecov.yml  index.html  jest.config.ts  lerna.json  package-lock.json  package.json  pyproject.toml  ssg.config.js  ssg.config.ts  vite.config.ts  wcag-guideline-template.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.husky/: pre-commit  pre-push
docs/: .html  404.html  CONVERSION_PATHWAYS.md  _.html  about.html  blog.html  contact.html  disclosures.html  index.html  manifest.json  products.html  robots.txt  rss.xml  services.html  sitemap.xml  wcag.html
public/: index.html  rss.xml  sitemap.xml
research/: Competitor Analysis.md  Content Strategy Workplan.md  Lighthouse-Live-Main-20260422.json  Lighthouse-PostFix-20260422.json  Lighthouse-Production-20260422.html  Lighthouse-Production-20260422.json  PERFORMANCE-ANALYSIS-20260422.md  etl-research-docs.md  keyword-research.md  lighthouse.json  wcag-template-research-summary.md  wcag-template-suggestion.md
scripts/: README.md  analyze_trace.py  gen-static.js  gen-static.ts  qa_html.py  rss.js  sitemap.js  test_ssg_regression.py  update-coverage-badge.js
src/: index.js  index.tsx  server.tsx  setupTests.ts
testing/: ACCESSIBILITY_HEURISTICS.md  (+2 more)
(+989 files in other folders)
