[project]
name = "accessitech-qa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-frontmatter>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "io: marks tests that perform file I/O",
    "integration: marks tests that hit network or subprocess calls",
    "slow: marks tests that take >1 second",
]
